# CD-Grab

./: .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.debian_sid  Dockerfile.fedora_rawhide  Dockerfile.raspbian  Dockerfile.ubuntu  Dockerfile.windows  README.md  appveyor.yml  release.py  run_cmake.cmd  vcpkg.json
.github/workflows/: cmake.yml
cmake/: FindCddb2.cmake  FindFlac.cmake  FindOpus.cmake  FindSamplerate.cmake  FindSoxr.cmake  GitVersion.cmake  debian.cmake  sanitizers.cmake  vcpkg.cmake
gui/: About.cc  About.h  CMakeLists.txt  CddaWorker.cc  CddaWorker.h  MainWindow.cc  MainWindow.h  QExceptionApplication.cc  QExceptionApplication.h  TrackTableModel.cc  TrackTableModel.h  about.ui  dutch.ts  grabber.cc  grabber.h  main.cc  main.ui  tags.ui  translations.qrc  version.cpp.in  version.h
libCdGrab/: CMakeLists.txt  DiscInfoDatabase.cc  cddb.cc  gpc.cc  parse.cc  parse.h
libCdGrab/MtFuji/: cdtext.cc  cdtext.h  configuration.cc  configuration.h  discInformation.cc  discInformation.h
libCdGrab/file/: cue.cc  flac.cc  nrg.cc  opus.cc  sectorDb.cc
libCdGrab/include/cdgrab/: DiscInfoDatabase.h  buffer_view.h  cdda.h  cddb.h  gpc.h  grab_export.h
libCdGrab/include/cdgrab/file/: cue.h  flac.h  nrg.h  opus.h  sectorDb.h
libCdGrab/linux/: Device.cc  Device.h  cdda.cc  cdda.h.bak  mmc.cc  mmc.h
libCdGrab/macos/: cdda.cc  mediaIterator.cc  mediaIterator.h
libCdGrab/windows/: Device.cc  Device.h  cdda.cc
nrg2dts/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  testCddb.cc  testSectorDb.cc
xbuild/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.md  xbuild.cc  xbuild.go
